// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should show tile preview chart when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Observable]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  marketingVideoUrl$={[Function Store]}
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      <pf-tile-preview-chart />
      
      
      
      
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview icon when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Observable]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  marketingVideoUrl$={[Function Store]}
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      
      <pf-tile-preview-icon />
      
      
      
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview list when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Observable]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  marketingVideoUrl$={[Function Store]}
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      
      
      <pf-tile-preview-list />
      
      
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;
